video-to-text-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api
spec:
  type: LoadBalancer
  selector:
    app: video-to-text
  ports:
  - port: 5001
    targetPort: 5000
